--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,6 +2,12 @@
   <h3 class="text-light">GifApp</h3>
   <hr class="text-white" />
   <div class="list-group list reset">
-    <a href="#" class="list-group-item list-group-action">Dashboard</a>
+    <a
+      href="#"
+      class="list-group-item list-group-action"
+      *ngFor="let item of historial"
+    >
+      {{ item }}
+    </a>
   </div>
 </div>
