--- a/src/app/gifs/result/result.component.html
+++ b/src/app/gifs/result/result.component.html
@@ -1,1 +1,21 @@
-<p>result works!</p>
+<!-- <ul>
+  <li *ngFor="let item of resultados">
+	  {{item.}}
+    {{ item.title }}
+  </li>
+</ul> -->
+
+<div class="row">
+  <div *ngFor="let item of resultados" class="col-md-4 col-sm-6">
+    <div class="card">
+      <img
+        [src]="item.images.downsized_medium.url"
+        [alt]="item.title"
+        class="card-image-top"
+      />
+      <div class="card-body">
+        <p class="card-text">{{ item.title }}</p>
+      </div>
+    </div>
+  </div>
+</div>
