--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
       class="list-group-item list-group-action"
       *ngFor="let item of historial"
     >
-      {{ item }}
+      {{ item | titlecase }}
     </a>
   </div>
 </div>
